# simple_tools

./: .gitignore  .gitmodules  Dockerfile  READEME.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: index.py
src/app/: db_api.py  es_api.py  slack_api.py
src/pages/: Alias_Switcher.py  Index_Cleaner.py  Indexing_PPAUTOCOMPLETE.py  MongoDB_Importer.py  alias_switcher.py  dummy.py
